fix: menu is too close to window bar which causes some menus cannot be clicked.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,9 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --iframe-top: 0px;
+}
+
+#iframe-inner {
+    @apply p-0 m-0 absolute left-0 right-0 bottom-0 w-full;
+    top: var(--iframe-top, 0)
+}
+
 iframe {
-    @apply p-0 m-0 fixed top-0 left-0;
-    width: 100vw;
-    height: 100vh;
+    @apply w-full h-full;
+}
+
+.window-control {
+    @apply flex flex-row justify-end items-stretch;
+    background-color: #f1f3f4;
+    height: var(--iframe-top);
+}
+
+.window-control-button {
+    @apply flex justify-center items-center hover:bg-gray-200;
+    width: var(--iframe-top);
+    height: var(--iframe-top);
+    display: none;
 }
 
